--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -8,13 +8,13 @@
     "dev": "nodemon bot.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.21.2",
-    "fs-extra": "^11.3.1",
-    "helmet": "^8.1.0",
-    "venom-bot": "^5.0.17",
-    "whatsapp-web.js": "^1.34.1"
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "helmet": "^7.1.0",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "latest"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
